# faac

./: FINDINGS.md  HANDOFF.md  MXU3_FINDINGS.md  RESEARCH.md  apply_fix.py  base_is.json  baseline_is.json  baseline_is_b64.json  baseline_is_full.json  baseline_is_low.json  baseline_is_q50.json  check_clamping.py  check_energy.py  compare_energy.py  compare_fix.py  debug_sbr.py  energy_baseline.txt  energy_fixed.txt  find_drops.py  fix.patch  fix.py  fix_quantize.py  fix_quantize_v11.py  fix_quantize_v12.py  fix_sbr_target16.py  fix_shim.py  meson.build  meson_options.txt  mixed_final.json  mixed_final_b64.json  mixed_final_full.json  mixed_final_low.json  mixed_final_q50.json  ms.json  mxu2_dsp.h  none.json  results.json  results_final_fix_v3.json  results_no_tns_final_v2.json  results_no_tns_final_v3.json  (+3 more)
frontend/: faacgui.rc  main.c  maingui.c  meson.build  resource.h  upsample.c  upsample.h
include/: faaccfg.h
install/include/: faaccfg.h
install/lib/x86_64-linux-gnu/: libfaac.so.0.0.0
libfaac/: bitstream.c  bitstream.h  coder.h  cpu_compute.c  cpu_compute.h  frame.c  frame.h  huff2.c  huff2.h  meson.build  mxu2_shim.h  mxu3_shim.h  pseudo_sbr.c  pseudo_sbr.h  psy_tables.c  psy_tables.h  quantize.c  quantize.h  quantize_mxu.c  quantize_sse.c  resample.c  resample.h  sbr.c  sbr.h  stereo.c  tns.c  util.c  util.h
results/: candidate.json  final_high.json  final_results.json  final_verify.json  run1.json
results_compare/: amd64_base.json  amd64_cand.json
results_diff/: test_cand.json
results_final/: test_base.json  test_cand.json
(+2 files in other folders)
