option('frontend',
    description: 'Build the frontend',
    type: 'boolean',
    value: true)

option('floating-point',
    description: 'Floating point precision',
    type: 'combo',
    choices: ['single', 'double'],
    value: 'double')

option('max-channels',
    description: 'Maximum number of channels',
    type: 'integer',
    min: 1,
    max: 8,
    value: 8)

option('simd-alignment',
    description: 'Alignment for SIMD operations (in bytes)',
    type: 'integer',
    min: 8,
    max: 64,
    value: 16)
